Fixed Navbar
Fixed Navbar.

**Is not responsive yet!**

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@ body {
   height:350px;
   margin: 0 auto;
   position: absolute;
-  top: 40px;
+  top: 25px;
   left: 40%;
   width:350px;
   z-index: 1;
@@ -56,24 +56,24 @@ body {
 *   Navbar
 -----------------------------------------------*/
 
-.navbar{
+nav{
   box-sizing: border-box;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: space-between;
-  padding: 10px;
-  position: absolute;
+  margin: 0 auto;
+  padding:60px 20px 0 20px;
+  position:absolute;
   width: 100%;
-  background-color: transparent;
   z-index: 1;
   .icon {
+    box-sizing: inherit;
     color: white;
     font-family: "Champagne & Limousines", "Avenir", "Helvetica";
-    font-size:20px;
+    font-size:28px;
     height:75px;
     min-width: 16.66%;
-    background-color: royalblue;
+    padding-top: 28px;
+    text-align: center;
   }
 }
 
